SMTP authentication fixed

--- a/TourismPoint/static/index-2.html
+++ b/TourismPoint/static/index-2.html
@@ -63,7 +63,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand page-scroll" href="index-2.html"><img src="img/logo.png" alt="Logo" /></a>
+						<a class="navbar-brand page-scroll" href="index-2.html"><img src="img/logoB_resize-nobg.png" alt="Logo" /></a>
 					</div>
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
