--- a/TourismPoint/static/index-2.html
+++ b/TourismPoint/static/index-2.html
@@ -9,20 +9,27 @@
     <meta name="author" content="" />
 
     <title>Tour Maker - Creative Tour &amp; Travel Agency HTML Template</title>
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="{% static 'img/favicon.png' % }"
+      type="image/x-icon"
+    />
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
     <!--Datepicker-->
-    <link href="css/datepicker.css" rel="stylesheet" />
+    <link href="{% static 'css/datepicker.css' %}" rel="stylesheet" />
     <!-- Animate CSS -->
-    <link href="css/animate.css" rel="stylesheet" />
+    <link href="{% static 'css/animate.css' %}" rel="stylesheet" />
     <!--Fancybox-->
-    <link href="css/jquery.fancybox.css" rel="stylesheet" />
+    <link href="{% static 'css/jquery.fancybox.css' %}" rel="stylesheet" />
     <!-- font-awesome-->
-    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css" />
+    <link
+      rel="stylesheet"
+      href="{% static 'fonts/font-awesome/css/font-awesome.min.css' %}"
+    />
     <!--Owl Carousel-->
-    <link href="css/owl.carousel.css" rel="stylesheet" />
+    <link href="{% static 'css/owl.carousel.css' %}" rel="stylesheet" />
     <!--Google Fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,500,700"
@@ -40,10 +47,18 @@
       type="text/css"
     />
     <!-- Main CSS -->
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link
+      href="{% static 'css\style.css' %}"
+      rel="stylesheet"
+      type="text/css"
+    />
     <!-- Color switcher -->
-    <link rel="stylesheet" href="css/skin/switcher.css" />
-    <link rel="stylesheet" href="css/skin/color-skin-name.html" id="colors" />
+    <link rel="stylesheet" href="{% static 'css/skin/switcher.css' %}" />
+    <link
+      rel="stylesheet"
+      href="{% static 'css/skin/color-skin-name.html' %}"
+      id="colors"
+    />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -79,7 +94,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand page-scroll" href="index-2.html"
-                ><img src="img/logo.png" alt="Logo"
+                ><img src="img/logoB_resize-nobg.png" alt="Logo"
               /></a>
             </div>
 
