--- a/TourismPoint/staticfiles/home.html
+++ b/TourismPoint/staticfiles/home.html
@@ -116,7 +116,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand page-scroll" href="index-2.html"><img
+						<a class="navbar-brand page-scroll" href="{% static 'index-2.html' %}"><img
 								src="{% static 'img/logoOG-nobg.png' %}" alt="Logo" /></a>
 					</div>
 
